--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,11 @@
-name=easyC_template
-version=0.1.0
+name=SHTC3 Soldered Library
+version=1.0.0
 author=Soldered
 maintainer=Soldered <soldered@soldered.com>
-sentence=Only a template used to create other libraries
-paragraph=Template, should not be used like this
-category=Sensor
-url=www.soldered.com
-repository=https://github.com/SolderedElectronics/Soldered-Generic-Arduino-Library
+sentence=Library for controlling SHTC3 sensor with EasyC comunication 
+paragraph=Library for controlling SHTC3 sensor to get temperature and humidity data
+category=Sensors
+url=https://solde.red/333032
+repository=https://github.com/SolderedElectronics/Soldered-SHTC3-Temperature-Humidity-Sensor-Arduino-Library
 architectures=*
-includes=Generic-easyC-SOLDERED.h
+includes=SHTC3-SOLDERED.h
