--- a/.github/workflows/arduino_lint.yml
+++ b/.github/workflows/arduino_lint.yml
@@ -1,9 +1,10 @@
-on: [push]
+on: [push, pull_request]
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+      - name: Arduino Lint Check
       - uses: actions/checkout@v3
       - uses: arduino/arduino-lint-action@v1
         with:
-          compliance: strict
+          compliance: specification
