--- a/.github/workflows/arduino_lint.yml
+++ b/.github/workflows/arduino_lint.yml
@@ -3,8 +3,9 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Arduino Lint Check
+      - name: Checkout dev branch
         uses: actions/checkout@v3
+      - name: Arduino Lint Check
         uses: arduino/arduino-lint-action@v1
         with:
-            compliance: specification
+          compliance: specification
