--- a/.github/workflows/arduino_lint.yml
+++ b/.github/workflows/arduino_lint.yml
@@ -10,6 +10,7 @@ jobs:
         uses: actions/checkout@v3
       - uses: arduino/arduino-lint-action@v1
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           compliance: specification
           project-type: library
           recursive: true
