--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=SHTC3 Soldered Library
+name=TestSHTC3 Soldered Library
 version=1.0.0
 author=Soldered
 maintainer=Soldered <soldered@soldered.com>
